Use requirejs and jquery-mobile.

--- a/mujina/views/index.haml
+++ b/mujina/views/index.haml
@@ -1,3 +1,4 @@
+!!! 5
 %html
   %head
     %title Hello World
@@ -6,3 +7,5 @@
     %h1 Hello World
 
     %p Example using HAML
+
+    %script(src="/javascript/require.js")
