Add handlebars. Begin to generate a TV guide listing from an API call.

--- a/mujina/views/index.haml
+++ b/mujina/views/index.haml
@@ -1,25 +1,1 @@
-!!! 5
-%html
-  %head
-    %title Mujina
-    %link{:type => "text/css", :rel => "stylesheet", :href => "/stylesheets/jquery.mobile.css"}
-    %script(src="/javascript/require.js")
-
-  %body
-    %div{ :data => { :role => "page" } }
-      %div{ :data => { :role => "header" } }
-        %h1 Mujina
-
-      %div{ :data => { :role => "content" } }
-      %p Example using HAML
-
-    :javascript
-          requirejs.config({
-              baseUrl: '/javascript',
-              paths: {
-                  "jquery" : '/javascript/jquery',
-                  "jquery-mobile" : "/javascript/jquery.mobile"
-              }
-          });
-
-          requirejs(["jquery", "jquery-mobile"]);
+%p Welcome to Mujina!
