--- a/mujina/views/tv_guide.haml
+++ b/mujina/views/tv_guide.haml
@@ -1,10 +1,25 @@
 #tv_guide
 
 %script#tv-guide-template(type="text/x-handlebars-template")
-  %table#guide-table{ :data => { :role => 'table' } }
-    = hb 'each ProgramGuide.Channels' do
-      %tr
-        %td
-          %div{:hb => 'ChanId'}
-        %td<
-          = hb 'CallSign'
+  %ol
+    %li
+      Date
+      %ol
+        %li
+          time 1
+        %li
+          time 2
+        %li
+          time 3
+        %li
+          time 4
+        %li
+          = hb 'each ProgramGuide.Channels' do
+            %ol
+              %li<
+                = hb 'CallSign'
+
+                %ol
+                  = hb 'each Programs' do
+                    %li<
+                      = hb 'Title'
