Test some basic CSS for the guide.

--- a/mujina/views/layout.haml
+++ b/mujina/views/layout.haml
@@ -2,6 +2,7 @@
   %head
     %title= @title
     %link{:type => "text/css", :rel => "stylesheet", :href => "/stylesheets/jquery.mobile.css"}
+    %link{:type => "text/css", :rel => "stylesheet", :href => "/stylesheets/style.css"}
     %script(src="/javascript/vendors/require.js")
   %body
     #header
