Add dependencies for Ember and Ember Data.

--- a/mujina/views/js.haml
+++ b/mujina/views/js.haml
@@ -1,4 +1,7 @@
 %script(src="/javascript/vendors/jquery.js")
 %script(src="/javascript/vendors/jquery.mobile.js")
 %script(src="/javascript/vendors/handlebars.js")
-%script(src="/javascript/app.js")
+%script(src="/javascript/vendors/ember.js")
+%script(src="/javascript/vendors/ember-data.js")
+%script(src="/javascript/application.js")
+%script(src="/javascript/router.js")
