--- a/mujina/views/tv_guide.haml
+++ b/mujina/views/tv_guide.haml
@@ -1,6 +1,6 @@
 #tv_guide
 
-%script#tv-guide-template(type="text/x-handlebars-template")
+%script#tv-guide-template(type="text/x-handlebars-template"){ :data => { :template_name => 'tv_guide' } }
   %ol
     %li
       Date
