Refactor to use the JSON Gem.

--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -12,8 +12,8 @@
             </div>
         </script>
 
-        <script type="text/x-handlebars" data-template-name="products">
-            <h2>Products</h2>
+        <script type="text/x-handlebars" data-template-name="shows">
+            <h2>Shows</h2>
             {{#each controller}}
             {{ title }}
             {{/each}}
