--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -12,7 +12,7 @@
             </div>
         </script>
 
-        <script type="text/x-handlebars" data-template-name="shows">
+        <script type="text/x-handlebars" data-template-name="channels">
             <h2>Shows</h2>
             {{#each controller}}
             {{ title }}
