--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -8,15 +8,18 @@
         <script type="text/x-handlebars">
             <div class="main">
                 <h1>Hello World</h1>
+                {{#link-to "channels"}}Start rolling dice!{{/link-to}}
                 {{outlet}}
             </div>
         </script>
 
         <script type="text/x-handlebars" data-template-name="channels">
             <h2>Shows</h2>
-            {{#each controller}}
-            {{ id }}
-            {{/each}}
+            <ul>
+                {{#each}}
+                <li>Hello, {{call_sign}}!</li>
+                {{/each}}
+            </ul>
         </script>
 
         <script src="/javascript/vendors/jquery.js" type="text/javascript"></script>
