SASS and Compass integration.

--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title><%= @title %></title>
+        <link rel="stylesheet" type="text/css" href="/stylesheets/mujina.css">
     </head>
 
     <body>
         <div id="content">
-            Loading TV Guide...
+            Loading TV Guide... <img src="/images/ajax-loader.gif" />
         </div>
 
         <script type="text/template" id="channels-template">
