--- a/mujina/views/stylesheets/mujina.scss
+++ b/mujina/views/stylesheets/mujina.scss
@@ -1,10 +1,24 @@
+@import "compass/css3";
+@import "compass/typography/lists/inline-list";
+
 html {
 }
 
-ol {
-  list-style: none;
+body {
+  width: 100%;
 }
 
-li {
-  /*display: inline-block;*/
+div.content {
+  width: 100%;
+}
+
+ol.tv-guide-times li {
+  display: block;
+  width: 25%;
+
+}
+
+ol.tv-guide-list {
+  @include inline-list;
+  background-color: red;
 }
