--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -2,41 +2,47 @@
 <html>
     <head>
         <title><%= @title %></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="/stylesheets/mujina.css">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/jquery.mobile.css">
     </head>
 
     <body>
-        <div class="content">
-            <h1>TV Guide</h1>
-            <div id="tv-guide">
+        <div data-role="page" class="content">
+            <div data-role="header">
+                <h1>TV Guide</h1>
+            </div>
+
+            <div id="tv-guide" data-role="content">
                 <p>Loading TV Guide... <img src="/images/ajax-loader.gif" /><p></p>
             </div>
         </div>
 
         <script type="text/template" id="channels-template">
-            <ol class="tv-guide-list">
+            <ul class="tv-guide-list" data-role="listview">
                 <li>
-                    <ol>
+                    <ul class="tv-guide-times">
                         <li>00:00</li>
                         <li>00:30</li>
                         <li>01:00</li>
                         <li>00:30</li>
-                    </ol>
+                    </ul>
                 </li>
             <%% _.each(rc.channels, function(channel){ %>
                 <li>
-                    <ol>
+                    <ul>
                         <li><img src="/tv/channel/1/icon" /></li>
                         <li class="channel-details"><%%- channel.channel_number %> - <%%- channel.call_sign %></li>
-                        <li class="channel-details"><%%- channel.shows %> - <%%- channel.call_sign %></li>
-
-                    </ol>
+                        <li class="sixty">Eastenders</li>
+                        <li class="sixty">Holby City</li>
+                    </ul>
                 </li>
             <%% }); %>
-            </ol>
+            </ul>
         </script>
 
         <script src="/javascript/vendors/jquery.js" type="text/javascript"></script>
+        <script src="/javascript/vendors/jquery.mobile.js" type="text/javascript"></script>
         <script src="/javascript/vendors/handlebars.js" type="text/javascript"></script>
         <script src="/javascript/vendors/underscore.js" type="text/javascript"></script>
         <script src="/javascript/vendors/backbone.js" type="text/javascript"></script>
