--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -1,26 +1,28 @@
-<div id="tv-guide" data-role="content">
+<div id="tv-guide">
     <p>Loading TV Guide... <img src="/images/ajax-loader.gif" /><p></p>
 </div>
 
 <script type="text/template" id="channels-template">
-    <ul class="tv-guide-list" data-role="listview">
-        <li>
-            <ul class="tv-guide-times">
-                <li>00:00</li>
-                <li>00:30</li>
-                <li>01:00</li>
-                <li>00:30</li>
-            </ul>
-        </li>
-        <%% _.each(rc.channels, function(channel){ %>
-        <li>
-            <ul>
-                <li><img src="/tv/channel/1/icon" /></li>
-                <li class="channel-details"><%%- channel.channel_number %> - <%%- channel.call_sign %></li>
-                <li class="sixty">Eastenders</li>
-                <li class="sixty">Holby City</li>
-            </ul>
-        </li>
+    <div class="row">
+        <div class="col-xs-2 grid-header">&nbsp;</div>
+        <div class="col-xs-1-2-5 grid-header">00:00</div>
+        <div class="col-xs-1-2-5 grid-header">00:15</div>
+        <div class="col-xs-1-2-5 grid-header">00:30</div>
+        <div class="col-xs-1-2-5 grid-header">00:45</div>
+        <div class="col-xs-1-2-5 grid-header">01:00</div>
+        <div class="col-xs-1-2-5 grid-header">01:15</div>
+        <div class="col-xs-1-2-5 grid-header">01:30</div>
+        <div class="col-xs-1-2-5 grid-header">01:45</div>
+    </div>
+
+    <%% _.each(rc.channels, function(channel){ %>
+    <div class="row">
+        <div class="col-xs-2 channel-row"><%%- channel.call_sign %> - <%%- channel.number %></div>
+        <%% _.each(channel.shows, function(show) { %>
+        <div class="col-xs-2 channel-row" data-toggle="tooltip" title="first tooltip"><%%- show.title %> - <%%- show.description %></div>
         <%% }); %>
-    </ul>
+    </div>
+    <%% }); %>
 </script>
+
+<script src="/javascript/tv_guide.js" type="text/javascript"></script>
