--- a/mujina/views/layout.erb
+++ b/mujina/views/layout.erb
@@ -1,26 +1,53 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title><%= @title %></title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
         <link rel="stylesheet" type="text/css" href="/stylesheets/mujina.css">
-        <link rel="stylesheet" type="text/css" href="/stylesheets/jquery.mobile.css">
+        <link href="/stylesheets/bootstrap.css" rel="stylesheet">
     </head>
 
     <body>
-        <div data-role="page" class="content">
-            <div data-role="header">
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Mujina</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Home</a></li>
+                        <li class="active"><a href="/tv/guide">TV Guide</a></li>
+                        <li><a href="/tv/recordings">Recordings</a></li>
+                        <li><a href="/videos">Videos</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="page-header">
                 <h1><%= @header %></h1>
+                <p class="lead">MythTV TV guide</p>
             </div>
 
-            <%= yield %>
+            <div class="content">
+                <%= yield %>
+            </div>
         </div>
 
         <script src="/javascript/vendors/jquery.js" type="text/javascript"></script>
-        <script src="/javascript/vendors/jquery.mobile.js" type="text/javascript"></script>
-        <script src="/javascript/vendors/handlebars.js" type="text/javascript"></script>
         <script src="/javascript/vendors/underscore.js" type="text/javascript"></script>
         <script src="/javascript/vendors/backbone.js" type="text/javascript"></script>
+        <script src="/javascript/vendors/bootstrap.js"></script>
         <script src="/javascript/app.js" type="text/javascript"></script>
     </body>
 </html>
