Clearly there's a better way to work out what class we should be using to indicate how long a show should be.

--- a/mujina/views/stylesheets/mujina.scss
+++ b/mujina/views/stylesheets/mujina.scss
@@ -24,11 +24,21 @@ body {
   @include ellipsis();
 }
 
+.col-xs-0-8,
 .col-xs-1-2-5,
 .col-xs-1-5,
 .col-xs-2,
 .col-xs-2-5 {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
   float: left;
+}
+
+.col-xs-0-8 {
+  width: 6.666666667%;
+
 }
 
 .col-xs-1-2-5 {
