Add a duration, start and endtime to the API.

--- a/mujina/views/layout.erb
+++ b/mujina/views/layout.erb
@@ -48,6 +48,8 @@
         <script src="/javascript/vendors/underscore.js" type="text/javascript"></script>
         <script src="/javascript/vendors/backbone.js" type="text/javascript"></script>
         <script src="/javascript/vendors/bootstrap.js"></script>
+        <script src="/javascript/vendors/moment.js"></script>
+        <script src="/javascript/helpers.js"></script>
         <script src="/javascript/app.js" type="text/javascript"></script>
     </body>
 </html>
