--- a/mujina/views/stylesheets/mujina.scss
+++ b/mujina/views/stylesheets/mujina.scss
@@ -12,6 +12,7 @@ body {
   border: 1px solid rgba(86, 61, 124, 0.2);
   padding-bottom: 15px;
   padding-top: 15px;
+  text-align: center;
 }
 
 .channel-row {
