Missed full stop in selector. Now we have a model for a guide we have to use .get('attribute').

--- a/mujina/views/stylesheets/mujina.scss
+++ b/mujina/views/stylesheets/mujina.scss
@@ -28,7 +28,7 @@ body {
 .col-xs-1-5,
 .col-xs-2,
 .col-xs-2-5,
-col-xs-no-width {
+.col-xs-no-width {
   position: relative;
   min-height: 1px;
   padding-right: 15px;
