Extra paragraph tag.

--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -1,5 +1,5 @@
 <div id="tv-guide">
-    <p>Loading TV Guide... <img src="/images/ajax-loader.gif" /><p></p>
+    <p>Loading TV Guide... <img src="/images/ajax-loader.gif" /></p>
 </div>
 
 <script type="text/template" id="channels-template">
