--- a/mujina/views/layout.erb
+++ b/mujina/views/layout.erb
@@ -47,6 +47,7 @@
         <script src="/javascript/vendors/jquery.js" type="text/javascript"></script>
         <script src="/javascript/vendors/underscore.js" type="text/javascript"></script>
         <script src="/javascript/vendors/backbone.js" type="text/javascript"></script>
+        <script src="/javascript/vendors/backbone-relational.js" type="text/javascript"></script>
         <script src="/javascript/vendors/bootstrap.js"></script>
         <script src="/javascript/vendors/moment.js"></script>
         <script src="/javascript/helpers.js"></script>
