--- a/mujina/views/tv_guide.erb
+++ b/mujina/views/tv_guide.erb
@@ -10,12 +10,12 @@
         <%% }); %>
     </div>
 
-    <%% rc.get('channels').each(function(channel){ %>
+    <%% rc.get('channels').each(function(channel) { %>
     <div class="row">
         <div class="col-xs-2 channel-row"><%%- channel.get('call_sign') %> - <%%- channel.get('number') %></div>
-        <%% _.each(channel.shows, function(show) { %>
-        <div class="col-xs-no-width channel-row" style="width: <%%- ((show.duration / rc.get('duration')) * 83) %>%;" data-toggle="tooltip" title="<%%- show.title %> - <%%- show.description %>">
-            <%%- show.title %> - <%%- show.description %>
+        <%% channel.get('shows').each(function(show) { %>
+        <div class="col-xs-no-width channel-row" style="width: <%%- show.width() %>%;" data-toggle="tooltip" title="<%%- show.title %> - <%%- show.description %>">
+            <%%- show.get('title') %> - <%%- show.get('description') %>
         </div>
         <%% }); %>
     </div>
